Closed Bug 1711830 Opened 4 years ago Closed 4 years ago

[gcc 11] OmxPlatformLayer.cpp:248:23: error: 'this' pointer is null [-Werror=nonnull]

Categories

(Core :: Audio/Video: Playback, defect)

defect

Tracking

()

RESOLVED FIXED
90 Branch
Tracking Status
firefox90 --- fixed

People

(Reporter: glandium, Assigned: glandium)

References

Details

Attachments

(1 file)

[task 2021-05-19T04:07:17.896Z] 04:07:17     INFO -  In file included from Unified_cpp_media_platforms_omx0.cpp:20:
[task 2021-05-19T04:07:17.896Z] 04:07:17     INFO -  /builds/worker/checkouts/gecko/dom/media/platforms/omx/OmxPlatformLayer.cpp: In member function 'OMX_ERRORTYPE mozilla::OmxPlatformLayer::Config()':
[task 2021-05-19T04:07:17.896Z] 04:07:17    ERROR -  /builds/worker/checkouts/gecko/dom/media/platforms/omx/OmxPlatformLayer.cpp:248:23: error: 'this' pointer is null [-Werror=nonnull]
[task 2021-05-19T04:07:17.896Z] 04:07:17     INFO -    248 |     return conf->Apply(*this, *(mInfo->GetAsAudioInfo()));
[task 2021-05-19T04:07:17.896Z] 04:07:17     INFO -        |            ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2021-05-19T04:07:17.896Z] 04:07:17    ERROR -  /builds/worker/checkouts/gecko/dom/media/platforms/omx/OmxPlatformLayer.cpp:254:23: error: 'this' pointer is null [-Werror=nonnull]
[task 2021-05-19T04:07:17.896Z] 04:07:17     INFO -    254 |     return conf->Apply(*this, *(mInfo->GetAsVideoInfo()));
[task 2021-05-19T04:07:17.896Z] 04:07:17     INFO -        |            ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2021-05-19T04:07:17.896Z] 04:07:17     INFO -  cc1plus: all warnings being treated as errors

The assertion check likely doesn't have a performance impact, and allows
compilers to know the dereference that follows is not going to apply to
a NULL pointer.

Pushed by mh@glandium.org: https://hg.mozilla.org/integration/autoland/rev/e493badaf7b1 Change MOZ_ASSERT to MOZ_RELEASE_ASSERT in OmxPlatformLayer::Config. r=bryce
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
Blocks: 1714004
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: