Bug 1711830 - Change MOZ_ASSERT to MOZ_RELEASE_ASSERT in OmxPlatformLayer::Config. r=bryce

The assertion check likely doesn't have a performance impact, and allows
compilers to know the dereference that follows is not going to apply to
a NULL pointer.

Differential Revision: https://phabricator.services.mozilla.com/D115447